--- a/sum_operation.ipynb
+++ b/sum_operation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "56b30c66-1a31-434b-9c56-0d10fce83db0",
    "metadata": {},
    "outputs": [
@@ -10,14 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test result: 3\n"
+      "hehe, I'm on develop branch\n"
      ]
     }
    ],
    "source": [
-    "a = 1\n",
-    "b = 2\n",
-    "print(\"Test result:\", a+b)"
+    "print(\"hehe, I'm on develop branch\")"
    ]
   },
   {
